<resources>
    <string name="app_name">Visiva Arquitetura</string>
    <string name="title_architecture">Arquitetura</string>
    <string name="title_decoration">Decoração</string>
    <string name="title_notifications">Notifications</string>
    <string name="tools_title">Title project</string>

    <string name="firebase_project_reference">projetos</string>
    <string name="firebase_image_reference">imagens</string>

    <string name="fab_extra_subject">Visiva Arquitetura - Pedido de orçamento</string>
    <string name="fab_extra_email">jessicamuniz.arq@gmail.com</string>
    <string name="fab_extra_text">Enviado através do Visiva App</string>
    <string name="title_chooser_email">Escolha o aplicativo para envio</string>
    <string name="fab_mailto">mailto</string>

    <string name="exception_falha_carregar_imagem">Falha ao recuperar a URL %1s</string>
    <string name="title_sobre_projeto">Sobre o projeto</string>
    <string name="fake_text_about_project">Aqui vai uma breve descrição sobre o projeto, explanando a necessidade do cliente, assim como os desafios e inspirações encontradas para atendimento de todos os requisitos do projeto.</string>
    <string name="title_imagens_projeto">Imagens</string>
    <string name="transition_cover">capa</string>
    <string name="transition_project_name">nameProject</string>
    <string name="toast_empty_gallery">Não existem imagens a serem exibidas. Verifique sua conexão com a internet e tente novamente</string>

    <!-- Content description -->
    <string name="desc_logo">Visiva Arquitetura</string>
    <string name="desc_image_item">Imagem do projeto</string>
    <string name="desc_bottom_navigation">Visualizção de projetos</string>
    <string name="desc_shortcut_email">Atalho para enviar e-mail</string>
    <string name="desc_loading">Imagem carregando</string>
    <string name="desc_imagem_capa">Imagem da capa do projeto</string>
    <string name="desc_slide_images">Exibição das imagens do projeto, em tela cheia.</string>
    <string name="appwidget_text">Example</string>
    <string name="add_widget">Add widget</string>
    <string name="widget_info_quant_proj">Atualmente temos %1s projetos que nos foram confiados.</string>
    <string name="tv_widget_click_here">Clique aqui e entre em contato por e-mail você também. Será um prazer atendê-lo(a)</string>
    <string name="desc_widget">Atalho para entrar em contato com a Visiva Arquitetura</string>
    <string name="empty_projects">Nenhum projeto encontrado</string>
    <string name="default_text_widget_adapter">Aqui vai uma mensagem padrão para ser utilizada no widget</string>
    <string name="msg_wifi_off">Sem conexão com a Internet</string>
    <string name="my_loading">Carregando projetos...</string>
    <string name="desc_wifi_off">Ícone indicando dispositivo sem conexão com a internet</string>
    <string name="propaganda_visiva">Visiva - Projetando sonhos</string>
    <string name="desc_image_project">Imagem \'$1\' do projeto $2</string>
    <string name="title_project_widget">Último projeto visualizado</string>
    <string name="project_test_example">Projeto de decoração no Lago Sul</string>
    <string name="desc_last_selected_project">Imagem de capa do último projeto selecionado</string>
</resources>
