<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:padding="@dimen/widget_margin">

    <LinearLayout
        android:id="@+id/layout_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:background="@color/background"
        android:gravity="center"
        android:orientation="vertical">

        <ListView
            android:id="@+id/list_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:contentDescription="@string/desc_widget" />

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/desc_logo"
            app:srcCompat="@drawable/ic_logo" />
    </LinearLayout>


    <RelativeLayout
        android:id="@+id/empty_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/empty_projects"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <!--<LinearLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:gravity="center"-->
    <!--android:orientation="vertical"-->
    <!--android:padding="16dp">-->

    <!--<TextView-->
    <!--android:id="@+id/tv_info_quant_proj"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:text="@string/widget_info_quant_proj"-->
    <!--android:textSize="18sp" />-->

    <!--<TextView-->
    <!--android:id="@+id/tv_click_here"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_marginTop="16dp"-->
    <!--android:text="@string/tv_widget_click_here"-->
    <!--android:textSize="18sp" />-->

    <!--<ImageView-->
    <!--android:id="@+id/iv_logo"-->
    <!--android:layout_width="72dp"-->
    <!--android:layout_height="72dp"-->
    <!--android:layout_marginTop="16dp"-->
    <!--android:contentDescription="@string/desc_logo"-->
    <!--app:srcCompat="@drawable/ic_logo" />-->

    <!--</LinearLayout>-->

</RelativeLayout>